# data-engineer-steel-eye-assessment

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
app/: config.py  model.py  pipeline.py  xml_fetcher.py  xml_parser.py
app/utils/: logging.py
test/: test_integration.py  test_xml_fetcher.py  test_xml_parser.py
