[project]
name = "data-engineer-steel-eye-assessment"
version = "0.1.0"
description = ""
authors = [
    {name = "pranjal",email = "rktpranjal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]

[tool.poetry]
packages = [{include="app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
