[project]
name = "data-engineer-steel-eye-assessment"
version = "0.1.0"
description = ""
authors = [
    {name = "pranjal",email = "rktpranjal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
packages = [{include="app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (==0.15.12)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.ruff]
# Match Black's default line length
line-length = 88
target-version = "py311" # Change to your python version

[tool.ruff.lint]
# "I" handles isort-style import sorting
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
# Enable Black-compatible formatting
quote-style = "double"
indent-style = "space"
